refactor: rename CSM → CMS (Content Management System)
- Rename directory kinto-csm → kinto-cms
- Update all internal references from CSM to CMS
- Fix CLI description: Content Site Manager → Content Management System
- Update README title accordingly

--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kinto/core",
   "version": "1.0.0",
-  "description": "Core motor for KINTO CSM - Minimal Astro + Tailwind base",
+  "description": "Core motor for KINTO CMS - Minimal Astro + Tailwind base",
   "type": "module",
   "scripts": {
     "dev": "astro dev",
