--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kinto-csm",
+  "name": "kinto-cms",
   "version": "1.0.0",
   "description": "KINTO Content Site Manager - Static sites with skill-based architecture",
   "type": "module",
