feat: sistema completo v1.0 - template arreglado, skills pre-implementadas, sitio serviworldlogistics
MEJORAS DEL SISTEMA:
- Fix astro.config.mjs: ES modules + alias Vite (@skills, @site)
- Agregar postcss.config.mjs para Tailwind 4
- Actualizar package.json con dependencias correctas
- Fix skill-create.js: genera exports de componentes automáticamente
- Agregar content.config.ts al template
- Agregar script validate.js

SKILLS PRE-IMPLEMENTADAS:
- contact-form: componente funcional completo
- blog: BlogList, BlogCard, BlogPost
- testimonials: ya existía, ahora exporta componentes
- cms-sveltia: panel admin

DOCUMENTACIÓN:
- AGENTS.md: guía de inicio para cualquier IA
- FEEDBACK_SIMULACION_KIMITEST.md: análisis de UX
- TAREAS_MEJORA_TECNICAS.md: guía técnica

SITIO SERVIWORLDLOGISTICS:
- 8 páginas generadas (Home, Servicios, Nosotros, Contacto, Blog)
- 4 skills activas
- Build exitoso

HERRAMIENTAS:
- ./start script para iniciar con contexto pre-cargado

--- a/templates/enterprise/package.json
+++ b/templates/enterprise/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "validate": "node scripts/validate.js",
+    "skills:list": "node scripts/skill-list.js"
   },
   "dependencies": {
     "astro": "^5.0.0",
@@ -16,6 +18,6 @@
   },
   "devDependencies": {
     "tailwindcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0"
+    "@tailwindcss/postcss": "^4.0.0"
   }
 }
