--- a/sites/serviworldlogistics/package.json
+++ b/sites/serviworldlogistics/package.json
@@ -11,8 +11,9 @@
     "skill:remove": "node scripts/skill-remove.js"
   },
   "dependencies": {
-    "astro": "^5.0.0",
-    "@kinto/core": "file:../../core"
+    "@kinto/core": "file:../../core",
+    "@tailwindcss/postcss": "^4.1.18",
+    "astro": "^5.0.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.0",
